--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-icons": "^5.5.0",
+    "react-simple-star-rating": "^5.1.7",
     "simple-parallax-js": "^6.3.3",
     "tailwind-merge": "^3.3.1"
   },
